# Ubuntu-Touch-Antivirus

./: Antivirus.apparmor  CMakeLists.txt  CMakeLists.txt.user.f7fe6c2  README.md  manifest.json.in
app/: ActiveServices.qml  Antivirus.desktop.in  CMakeLists.txt  Main.qml  PassGen.qml  about.qml  firewall.qml  ipchecker.qml  pics.qrc  scan.qml  submit.qml
app/tests/autopilot/: run
app/tests/autopilot/Antivirus/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/Antivirus/: backend.cpp  backend.h  firewallbackend.cpp  firewallbackend.h  mytype.cpp  mytype.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: antivirus.iprogramer.pot
